E2Eの生成AI活用

--- a/wiki/00-目次.md
+++ b/wiki/00-目次.md
@@ -4,6 +4,9 @@
 
 ## 📖 目次
 
+> ℹ️ 00〜11 は本プロジェクトのアプリに関する Wiki です。12〜14 は生成 AI 活用の「別冊」として扱います。
+
+### 🔷 プロジェクトWiki（00〜11）
 - [🎯 1. 概要](./01-概要.md) - プロジェクトの目的、機能、技術スタック
 - [🚀 2. クイックスタート](./02-クイックスタート.md) - 環境構築と起動方法
 - [🏗️ 3. アーキテクチャ](./03-アーキテクチャ.md) - システム構成とコンポーネント設計
@@ -15,6 +18,11 @@
 - [🚢 9. デプロイメント](./09-デプロイメント.md) - ビルドとデプロイ手順
 - [👥 10. コントリビューションガイド](./10-コントリビューションガイド.md) - 開発ガイドとルール
 - [✨ 11. まとめ](./11-まとめ.md) - 総括と今後の展開
+
+### 🤖 生成AI活用ガイド（別冊）
+- [🛠️ 12. カスタムコマンド vs カスタムエージェント vs Agent Skills](./12-カスタムコマンドVSカスタムエージェント比較.md)
+- [🧭 13. E2Eテスト自動生成ガイド](./13-E2Eテスト自動生成ガイド.md)
+- [🧑‍💻 14. E2Eテスト専門エージェントガイド](./14-E2Eテスト専門エージェントガイド.md)
 
 ---
 
