Wiki13を実行＋Wiki修正

--- a/wiki/02-クイックスタート.md
+++ b/wiki/02-クイックスタート.md
@@ -195,7 +195,7 @@ npm run test
 npm run test:headless
 
 # 特定のテストを実行
-npx playwright test tests/login.spec.ts
+npx playwright test tests/e2e/login.spec.ts
 
 # テストレポートを表示
 npx playwright show-report
