--- a/wiki/00-目次.md
+++ b/wiki/00-目次.md
@@ -23,6 +23,7 @@
 - [🛠️ 12. カスタムコマンド vs カスタムエージェント vs Agent Skills](./12-カスタムコマンドVSカスタムエージェント比較.md)
 - [🧭 13. E2Eテスト自動生成ガイド](./13-E2Eテスト自動生成ガイド.md)
 - [🧑‍💻 14. E2Eテスト専門エージェントガイド](./14-E2Eテスト専門エージェントガイド.md)
+- [⚙️ 15. Issue 自動生成ガイド](./15-Issue自動生成ガイド.md)
 
 ---
 
